<?xml version="1.0"?>
<package format="2">
  <name>franka_simulation</name>
  <version>0.0.0</version>
  <description>The franka_simulation package</description>


  <maintainer email="jonas@todo.todo">jonas</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>franka_hw</build_depend>
  <build_depend>libfranka</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>franka_hw</exec_depend>
  <exec_depend>libfranka</exec_depend>

  <depend>roslib</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
